inoa-test/src/test/k3s/dev/infrastructure/grafana/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
    spec:
      initContainers:
        - name: grafana-postgres
          image: postgres:14.4-bullseye
          imagePullPolicy: Never
          command: [sh, -c, until psql ; do sleep 2 ; done]
          env:
            - name: PGCONNECT_TIMEOUT
              value: "1"
            - name: PGHOST
              valueFrom:
                configMapKeyRef:
                  name: grafana-environment
                  key: GF_DATABASE_HOST
            - name: PGUSER
              valueFrom:
                configMapKeyRef:
                  name: grafana-environment
                  key: GF_DATABASE_USER
            - name: PGPASSWORD
              valueFrom:
                secretKeyRef:
                  name: grafana-environment
                  key: GF_DATABASE_PASSWORD
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
        - name: grafana-keycloak
          image: curlimages/curl
          imagePullPolicy: IfNotPresent
          command: [sh, -c, until curl -fs $URL; do sleep 2; done]
          env:
            - name: URL
              value: keycloak/realms/inoa/protocol/openid-connect/certs
          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      containers:
        - name: grafana
          image: grafana/grafana:9.1.0
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: grafana-environment
            - secretRef:
                name: grafana-environment
          ports:
            - name: http
              containerPort: 8080
          startupProbe:
            httpGet:
              path: /api/health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 1
            successThreshold: 1
            failureThreshold: 25
          livenessProbe:
            httpGet:
              path: /api/health
              port: http
          volumeMounts:
            - name: config
              mountPath: /etc/grafana/provisioning/datasources/datasources.yaml
              subPath: datasources.yaml
              readOnly: true
            - name: config
              mountPath: /etc/grafana/provisioning/dashboards/dashboards.yaml
              subPath: dashboards.yaml
              readOnly: true
            - name: dashboards
              mountPath: /tmp/grafana/dashboards
              readOnly: true
            - name: tmp
              mountPath: /tmp/grafana
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
        - name: grafana-sidecar
          image: kiwigrid/k8s-sidecar:1.19.4
          imagePullPolicy: IfNotPresent
          envFrom:
            - configMapRef:
                name: grafana-sidecar-environment
          volumeMounts:
            - name: dashboards
              mountPath: /dashboards
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            privileged: false
            allowPrivilegeEscalation: false
            capabilities:
              drop: [ALL]
      securityContext:
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
      automountServiceAccountToken: true
      serviceAccountName: grafana
      terminationGracePeriodSeconds: 5
      volumes:
        - name: config
          configMap:
            name: grafana-config
        - name: dashboards
          emptyDir: {}
        - name: tmp
          emptyDir: {}
